MBug: Fixed edit view spacing before priority field.

--- a/apps/mbug/style.css
+++ b/apps/mbug/style.css
@@ -169,7 +169,7 @@ a {
 }
 
 .issue-edit .body {
-  margin-top: 200px;
+  margin-top: 176px;
 }
 
 .issue-edit .title {
